Fix Z-index of footer to not block player

--- a/client/src/Components/MusicPlayer/authenticationStyles.css
+++ b/client/src/Components/MusicPlayer/authenticationStyles.css
@@ -40,28 +40,6 @@
     text-shadow: 3px 5px 3px rgba(0, 0, 0, 0.9);
     font-family: 'Texturina', serif;
     font-weight: 700;
-    
 }
-.fab {
-    font-size: 50px;
-    margin: 0 25px;
-}
-.footerLogoIcon {
-    height: 90px;
-}
-.linkContainer {
-    display: flex;
-    align-items: center;
-}
-.linkContainer a {
-    text-decoration: none;
-    color: #1DB954;
-}
-.footerLogo {
-    position: fixed;
-    top: -1%;
-    right: 1%;
-    z-index: 100;
-    padding: 0;
-    margin: 0;
-}
+
+
